# human-computer-interaction

./: CMakeLists.txt  Functions.cpp  Functions.h  README.md  colorcode.cpp  colorcode.h  common.cpp  common.h  main.cpp
Documentatie/: Untitled-1.ai  Untitled-2.ai  Untitled-3.ai
L10/: dummy.cpp
Lab 1 - Spatii de culoare/: lab1.cpp  lab1.h
Lab 2 - Clasificarea pixelilor pe baza modelului/: lab2.cpp  lab2.h
Lab 3 - Segmentarea bazata pe regiuni/: lab3.cpp  lab3.h
Lab 4 - Detectia colturilor/: FISIER_PCT_3.txt  lab4.cpp  lab4.h
Lab 5 - Segmentarea obiectelor in miscare prin background substraction/: lab5.cpp  lab5.h
Lab_10_Detectia_de_persoane/: lab10.cpp  lab10.h
Lab_11/: lab11.cpp  lab11.h
Lab_6_Estimarea_fluxului_optic/: lab6.cpp  lab6.h
Lab_7_Estimarea_fluxului_optic_dens/: lab7.cpp  lab7.h
Lab_8_Faces/: FaceDetectandDisplay.txt  lab8.cpp  lab8.h
Lab_9_Detectie_Faciala/: lab9.cpp  lab9.h
Videos/: S3.avi  test_msv1_short.avi
